2009-02-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_table_names_from_database(): Filter out some 
	extra internal table names which may be created/reported by newer 
	versions of libgda.

2009-02-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db_table_data.[h|cc]: Added get_row_selected() virtual function, 
	used in record_new() instead of an always-null TreeModel::iterator.
	This lets lookups, default values, and calculated values be seen when 
	adding new list records or related records.
	* glom/mode_data/box_data_list.[h|cc]: 
	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: 
	Added get_row_selected() overrides.
	This should fix bug #569722 (Johannes Schmid)

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Main window: Correct the order of the Records: and 
	Found: labels, which became confused at some point, maybe during 1.8.

1.8.5:

2009-01-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_groups_list.cc: Added a missing quote 
	to fix the build.

2009-01-02  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/document/document_glom.cc (set_table_fields): Fixed
	logic so that the document is set to be modified when the new fields
	differ from the old fields, not when they compare equal.

	* glom/libglom/document/document_glom.h: Also copy the m_info member
	in DocumentTableInfo's copy constructor and assignment operator.
	This should fix bug #566102 (Iain Lane)

2008-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.h: show_tool_pallete(): Make this 
	non-virtual because there are no overrides.
	* glom/mode_find/box_data_details_find.cc: constructor, 
	fill_from_database(): Hide the tool palette, because it is useless in 
	Find mode.

2008-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/layout/layoutitem_text.cc: 
	Copy constructor and operator=: Copy the underlying text, not just 